syntax = "proto3";

option go_package = "./post";

import "google/protobuf/empty.proto";

service PostManager {
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse) {}
  rpc UpdatePost(UpdatePostRequest) returns (google.protobuf.Empty) {}
  rpc DeletePost(DeletePostRequest) returns (google.protobuf.Empty) {}
  rpc GetPostById(GetPostByIdRequest) returns (GetPostByIdResponse) {}
  rpc GetPostsOnPage(GetPostsOnPageRequest) returns (GetPostsOnPageResponse) {}
}

message Post {
  int32 PostId = 1;
  string Title = 2;
  int32 AuthorId = 3;
  string Content = 4;
}

message CreatePostRequest {
  string Title = 1;
  int32 AuthorId = 2;
  string Content = 3;
}

message CreatePostResponse {
  int32 PostId = 1;
}

message UpdatePostRequest {
  int32 PostId = 1;
  string Title = 2;
  int32 AuthorId = 3;
  string Content = 4;
}

message DeletePostRequest {
  int32 PostId = 1;
  int32 AuthorId = 2;
}

message GetPostByIdRequest { int32 PostId = 1; }

message GetPostByIdResponse { Post Post = 1; }

message GetPostsOnPageRequest { int32 PageId = 1; }

message GetPostsOnPageResponse { repeated Post Posts = 1; }